--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Application properties
+server.port=8091
+spring.application.name=email-sender
+server.servlet.context-path=/api/v1
+
+# Java mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=
@@ -8,3 +14,20 @@ spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.ssl.trust=*
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Eureka client properties
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Spring data jpa properties
+spring.datasource.url=jdbc:mysql://localhost:3306/email_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.batch_size=25
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show_sql=false
+
+# Logging properties
+logging.buffer.size=1024
+logging.level.com.elleined.email-sender=DEBUG
