added new controller and exception controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application properties
 server.port=8091
-spring.application.name=email-sender
+spring.application.name=email-service
 server.servlet.context-path=/api/v1
 
 # Java mail properties
