error message in java mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.jpa.show_sql=false
 
 # Logging properties
 logging.buffer.size=1024
-logging.level.com.elleined.email-sender=DEBUG
+logging.level.com.elleined.emailsenderapi=DEBUG
