context path are changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Application properties
 server.port=8091
 spring.application.name=email-service
-server.servlet.context-path=/api/v1
+server.servlet.context-path=/emailService/api/v1
 
 # Java mail properties
 spring.mail.host=smtp.gmail.com
