--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Application properties
 server.port=8091
 spring.application.name=email-service
-server.servlet.context-path=/emailService/api/v1
+server.servlet.context-path=/api/v1/email-service-api
 
 # Java mail properties
 spring.mail.host=smtp.gmail.com
@@ -16,7 +16,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Eureka client properties
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Logging properties
 logging.buffer.size=1024
