refactor and added docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Application properties
 server.port=8091
-spring.application.name=email-service
-server.servlet.context-path=/api/v1/email-service-api
+spring.application.name=email-sender-api
+server.servlet.context-path=/api/v1/esa
 
 # Java mail properties
 spring.mail.host=smtp.gmail.com
