--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>email-sender-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>email-sender-api</name>
-		<description>Creating API for sending email using spring boot with java mail</description>
+		<description>API for sending email</description>
 	<properties>
 		<java.version>17</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
