added spring actuator module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,11 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Eureka client properties
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# Discovery client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Actuator Properties
+management.security.enabled=false
 
 # Logging properties
 logging.buffer.size=1024
