--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ management.security.enabled=false
 # Logging properties
 logging.buffer.size=1024
 logging.level.com.elleined.emailsenderapi=DEBUG
+
+app.name=${APP_NAME}
