Updated pom and application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Application properties
-server.port=8091
+server.port=${PORT}
 spring.application.name=email-sender-api
 server.servlet.context-path=/api/v1/esa
 
@@ -19,10 +19,14 @@ spring.servlet.multipart.max-request-size=10MB
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Actuator Properties
-management.security.enabled=false
+management.endpoints.enabled-by-default=false
+management.endpoints.web.exposure.include=health
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+
+# Virtual Thread
+spring.threads.virtual.enabled=true
 
 # Logging properties
 logging.buffer.size=1024
 logging.level.com.elleined.emailsenderapi=DEBUG
-
-app.name=${APP_NAME}
