--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.ssl.trust=*
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=3MB
+spring.servlet.multipart.max-request-size=3MB
 
 # Discovery client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -30,3 +30,5 @@ spring.threads.virtual.enabled=true
 # Logging properties
 logging.buffer.size=1024
 logging.level.com.elleined.emailsenderapi=DEBUG
+
+app-name=${APP_NAME}
