Refactor some setting to accomodate further other projects

--- a/esa.env
+++ b/esa.env
@@ -1,4 +1,4 @@
-MAIL_USERNAME=juandelacruz@gmail.com
-MAIL_PASSWORD=abcdefghijkl
-APP_NAME=my_app
+MAIL_USERNAME=deniellemarmirandadeguzman@gmail.com
+MAIL_PASSWORD=webmtailnnmrmzca
+APP_NAME='PhysioAve Physical Therapy'
 PORT=8045
