--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-# Application properties
+# ===============================
+# Application Identity & Server
+# ===============================
 server.port=${PORT}
 spring.application.name=email-sender-api
 server.servlet.context-path=/api/v1/esa
 
-# Java mail properties
+# =================
+# Java Mail
+# =================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -15,20 +19,32 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=3MB
 
-# Discovery client
+# ===============================
+# Eureka Discovery Client
+# ===============================
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-# Actuator Properties
+# ===============================
+# Actuator & Monitoring
+# ===============================
 management.endpoints.enabled-by-default=false
 management.endpoints.web.exposure.include=health
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 
-# Virtual Thread
+# ===============================
+# Virtual Threads
+# ===============================
 spring.threads.virtual.enabled=true
 
-# Logging properties
-logging.buffer.size=1024
-logging.level.com.elleined.emailsenderapi=DEBUG
+# ===============================
+# Logging Configuration
+# ===============================
+logging.level.com.elleined.philippine_location_api=${LOG_LEVEL}
+logging.level.org.springframework.jdbc.core=${LOG_LEVEL}
+logging.level.org.springframework.jdbc.datasource=${LOG_LEVEL}
 
+# =================
+# Custom Properties
+# =================
 app-name=${APP_NAME}
