--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,8 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 # ===============================
 # Actuator & Monitoring
 # ===============================
-management.endpoints.enabled-by-default=false
-management.endpoints.web.exposure.include=health
-management.endpoint.health.enabled=true
+management.endpoints.access.default=read_only
+management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
 # ===============================
