--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ spring.threads.virtual.enabled=true
 # ===============================
 # Logging Configuration
 # ===============================
-logging.level.com.elleined.philippine_location_api=${LOG_LEVEL}
+logging.level.com.elleined.emailsenderapi=${LOG_LEVEL}
 logging.level.org.springframework.jdbc.core=${LOG_LEVEL}
 logging.level.org.springframework.jdbc.datasource=${LOG_LEVEL}
 
