--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 server.port=${PORT}
 spring.application.name=email-sender-api
-server.servlet.context-path=/api/${API_VERSION}/esa
+server.servlet.context-path=/api/v2/esa
 
 # =================
 # Java Mail
