Added service layer test cases

--- a/deployment/dev/.env
+++ b/deployment/dev/.env
@@ -1,3 +1,6 @@
+# ========================
+# Application Properties
+# =======================
 APP_NAME=My Development Email Sender
 PORT=8050
 LOG_LEVEL=DEBUG
