Add some comments in .env files

--- a/deployment/prod/.env
+++ b/deployment/prod/.env
@@ -4,12 +4,9 @@
 APP_NAME=My Production Email Sender
 PORT=8045
 LOG_LEVEL=INFO
-
 MAIL_USERNAME=<MAIL_USERNAME>
 MAIL_PASSWORD=<MAIL_PASSWORD>
 
-# =====================
-# Container Properties
-# =====================
+# Container properties
 IMAGE_TAG=v2.0.0
 CONTAINER_NAME=email-sender-api
