--- a/deployment/prod/docker-compose.yml
+++ b/deployment/prod/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://${CONTAINER_NAME}:${PORT}/api/v2/esa/actuator/health"]
+      test: ["CMD", "wget", "--spider", "http://${CONTAINER_NAME}:${PORT}/${CONTEXT_PATH}/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
