Added CORSConfig and added allowed-origin custom property

--- a/deployment/dev/.env
+++ b/deployment/dev/.env
@@ -2,6 +2,7 @@
 # Application Properties
 # =======================
 APP_NAME=My Development Email Sender
+ALLOWED_ORIGINS=http://localhost:4200
 PORT=8050
 LOG_LEVEL=DEBUG
 MAIL_USERNAME=<MAIL_USERNAME>
