--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,4 @@ logging.level.org.springframework.jdbc.datasource=${LOG_LEVEL}
 # Custom Properties
 # =================
 app-name=${APP_NAME}
+allowed-origins=${ALLOWED_ORIGINS}
