--- a/deployment/prod/.env
+++ b/deployment/prod/.env
@@ -2,6 +2,7 @@
 # Application Properties
 # =======================
 APP_NAME=My Production Email Sender
+ALLOWED_ORIGINS=http://localhost:4200
 PORT=8045
 LOG_LEVEL=INFO
 MAIL_USERNAME=<MAIL_USERNAME>
