--- a/deployment/prod/.env
+++ b/deployment/prod/.env
@@ -2,7 +2,7 @@
 # Application Properties
 # =======================
 APP_NAME=My Production Email Sender
-ALLOWED_ORIGINS=http://localhost:4200
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:5173
 PORT=8045
 LOG_LEVEL=INFO
 MAIL_USERNAME=<MAIL_USERNAME>
