added tz asia manila in prod docker compose

--- a/deployment/prod/docker-compose.yml
+++ b/deployment/prod/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - '${PORT}:${PORT}'
     environment:
+      - TZ=Asia/Manila
       - APP_NAME=${APP_NAME}
       - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
       - PORT=${PORT}
