--- a/deployment/dev/.env
+++ b/deployment/dev/.env
@@ -2,7 +2,7 @@
 # Application Properties
 # =======================
 APP_NAME=My Development Email Sender
-ALLOWED_ORIGINS=http://localhost:4200
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:5173
 PORT=8050
 LOG_LEVEL=DEBUG
 MAIL_USERNAME=<MAIL_USERNAME>
