Clear sensitive data from test application properties to avoid leaking credentials

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
-APP_NAME=My Development Email Sender
-PORT=8050
-LOG_LEVEL=DEBUG
+APP_NAME=
+PORT=
+LOG_LEVEL=
 
-MAIL_USERNAME=mailUsername
-MAIL_PASSWORD=mailPassword
+MAIL_USERNAME=
+MAIL_PASSWORD=
