Add integration tests for OTPController with GreenMail SMTP server
- Add OTPControllerIntegrationTest to perform integration testing of /otp endpoint
- Use GreenMailExtension to simulate SMTP server and verify email sending
- Configure test mail properties for Spring Boot JavaMailSender to use GreenMail SMTP
- Improve existing MailControllerTest and MailControllerIntegrationTest with consistent test data and GreenMail email verification
- Upgrade springdoc-openapi to 2.8.9 and add greenmail-junit5 2.1.4 test dependency
- Refactor OTPControllerTest to use meaningful test data and better assertions with jsonPathMatchers
- Verify OTP expiration durations and email receipt in integration tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,18 @@
+# ===============================
+# Application Identity & Server
+# ===============================
 APP_NAME=
 ALLOWED_ORIGINS=
 PORT=
 LOG_LEVEL=
-MAIL_USERNAME=
+MAIL_USERNAME=test@gmail.com
 MAIL_PASSWORD=
+# =================
+# Java Mail
+# =================
+spring.mail.host=127.0.0.1
+spring.mail.port=3025
+spring.mail.username=test
+spring.mail.password=test
+spring.mail.protocol=smtp
+
