--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.5'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'net.ltgt.errorprone' version '4.3.0'
 }
 
 java {
@@ -25,13 +26,32 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
+
+	errorprone "com.uber.nullaway:nullaway:0.12.9"
+	implementation "org.jspecify:jspecify:1.0.0"
+	errorprone "com.google.errorprone:error_prone_core:2.41.0"
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'com.icegreen:greenmail-junit5:2.1.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+import net.ltgt.gradle.errorprone.CheckSeverity
+
+tasks.withType(JavaCompile).configureEach {
+	options.errorprone {
+		check("NullAway", CheckSeverity.ERROR)
+		option("NullAway:AnnotatedPackages", "com.elleined")
+	}
+	// Include to disable NullAway on test code
+	if (name.toLowerCase().contains("test")) {
+		options.errorprone {
+			disable("NullAway")
+		}
+	}
 }
 
 tasks.named('test') {
