Refactor and update dependencies

--- a/deployment/dev/.env
+++ b/deployment/dev/.env
@@ -2,7 +2,7 @@
 # Application Properties
 # =======================
 APP_NAME=My Development Email Sender
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174,http://localhost:5175
 PORT=8050
 LOG_LEVEL=DEBUG
 MAIL_USERNAME=<MAIL_USERNAME>
