--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: SonarQube
+name: Email Sender API Workflow
 on:
   push:
     branches:
@@ -10,11 +10,11 @@ jobs:
     name: Build and analyze
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v5
         with:
           java-version: 21
           distribution: 'zulu' # Alternative distribution options are available
@@ -29,7 +29,7 @@ jobs:
       - name: Build and analyze
         run: ./gradlew clean build --info
       - name: Build and Push Docker Image
-        uses: mr-smithers-excellent/docker-build-push@v6
+        uses: mr-smithers-excellent/docker-build-push@v6.8
         with:
           image: elleined/email-sender-api
           tags: latest, v2.0.0
