Fix: Correct subject typo in OTPMessage and update test timeouts

--- a/deployment/dev/.env
+++ b/deployment/dev/.env
@@ -3,6 +3,7 @@
 # =======================
 APP_NAME=My Development Email Sender
 ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174,http://localhost:5175
+MAX_FILE_SIZE_IN_MB=3MB
 PORT=8050
 LOG_LEVEL=DEBUG
 MAIL_USERNAME=<MAIL_USERNAME>
