--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.ssl.trust=*
-spring.servlet.multipart.max-file-size=3MB
-spring.servlet.multipart.max-request-size=3MB
 
 # ===============================
 # Eureka Discovery Client
@@ -42,6 +40,12 @@ spring.threads.virtual.enabled=true
 logging.level.com.elleined.emailsenderapi=${LOG_LEVEL}
 logging.level.org.springframework.jdbc.core=${LOG_LEVEL}
 logging.level.org.springframework.jdbc.datasource=${LOG_LEVEL}
+# ===============================
+# Multipart Properties
+# ===============================
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE_IN_MB}
+spring.servlet.multipart.max-request-size=${MAX_FILE_SIZE_IN_MB}
+server.tomcat.max-swallow-size=-1
 
 # =================
 # Custom Properties
