--- a/deployment/prod/.env
+++ b/deployment/prod/.env
@@ -2,7 +2,8 @@
 # Application Properties
 # =======================
 APP_NAME=My Production Email Sender
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174,http://localhost:5175
+MAX_FILE_SIZE_IN_MB=3MB
 PORT=8050
 LOG_LEVEL=INFO
 MAIL_USERNAME=<MAIL_USERNAME>
