--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,8 @@ server.tomcat.max-swallow-size=-1
 # =================
 app-name=${APP_NAME}
 allowed-origins=${ALLOWED_ORIGINS}
+# ===============================
+# Spring OpenAPI Properties
+# ===============================
+springdoc.api-docs.enabled=${SPRING_OPENAPI_ENABLED}
+springdoc.swagger-ui.enabled=${SPRING_OPENAPI_ENABLED}
