--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,6 +7,7 @@ PORT=
 LOG_LEVEL=
 MAIL_USERNAME=test@gmail.com
 MAIL_PASSWORD=
+SPRING_OPENAPI_ENABLED=
 # =================
 # Java Mail
 # =================
